tf_scripts/nat_setup.tf
# setup nat gateway
resource "aws_eip" "nat" {
  vpc      = true
}
resource "aws_nat_gateway" "nat-gw" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.vpc-public-1.id
  depends_on = [aws_internet_gateway.main-gw]
}
